--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,16 @@
 <body>
 
 <header class="header">
+
     <div class="container">
         <!--Header nav -->
         <div class="header-nav">
-            <a class="logo">Dinaroi</a>
+            <img class="logo" src="images/logo.png" alt="logo">
+
 
 
             <nav id="nav" class="nav open">
+
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Formulare</a></li>
@@ -89,7 +92,7 @@
         </div>
     </div>
 </header>
-<div></div>
+<div><img class="info" src="images/info2.png" alt="info"></div>
 <div id="progress">
     <span id="progress-value"><img class="arrow" src="images/arrow.png"></span>
 </div>
