--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,7 @@
     </div>
 </header>
 <div><img class="info" src="images/info2.png" alt="info"></div>
+
 <div id="progress">
     <span id="progress-value"><img class="arrow" src="images/arrow.png"></span>
 </div>
@@ -108,7 +109,10 @@
 </script>
 <script src="main.js"></script>
 
-
+<footer>
+    <button class="button plakatbutton" type="button"><a href="">Plakat</a></button>
+    <div class="madeby">Made By: Dinara G. & Shirin E.</div>
+</footer>
 </body>
 </html>
 
