--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         </div>
     </div>
 </header>
-<div><img class="info" src="images/info2.png" alt="info"></div>
+<div><img class="info" src="images/infoukra.png" alt="info"></div>
 
 <div id="progress">
     <span id="progress-value"><img class="arrow" src="images/arrow.png"></span>
