--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,13 @@
             <nav id="nav" class="nav open">
 
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Formulare</a></li>
-                    <li class="nav-item"><a href="https://termin.bremen.de/termine/select2?md=50&lang=ua_UA" class="nav-link">Terminvereinbarung</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Programme</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Beratung</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Telefonbuch</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Kontakte</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">додому</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">форми</a></li>
+                    <li class="nav-item"><a href="https://termin.bremen.de/termine/select2?md=50&lang=ua_UA" class="nav-link">Призначення</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">програми</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">консультативний</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">телефонна книга</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">контакти</a></li>
 
                 </ul>
 
@@ -48,7 +48,7 @@
             <div class ="header-content">
                <h1 class ="header-heading">Добро пожаловать!</h1>
                <p >Здесь вы найдете информацию об учреждениях и органах власти в Бремене.</p>
-                <button class="button" type="button"><a href="https://www.google.com/maps/d/embed?mid=1ssJFDO0nSvmtCTCqISL792GdyZB0EQQ&ehbc=2E312F">Map</a></button>
+                <button class="button" type="button"><a href="https://www.google.com/maps/d/embed?mid=1ssJFDO0nSvmtCTCqISL792GdyZB0EQQ&ehbc=2E312F">Карта</a></button>
             </div>
 
 
