--- a/src/index.html
+++ b/src/index.html
@@ -92,8 +92,7 @@
         </div>
     </div>
 </header>
-<div><img class="info" src="images/infoukra.png" alt="info"></div>
-
+<div class="haupt"> <img class="info" src="images/infoblau.png" alt="info"></div>
 
 <script type="text/javascript">
     var counter = 1;
