--- a/src/index.html
+++ b/src/index.html
@@ -106,9 +106,15 @@
 </script>
 <script src="main.js"></script>
 
-<footer>
+<footer >
+<div class="footer-content">
+
+
+
     <button class="button plakatbutton" type="button"><a href="">Plakat</a></button>
     <div class="madeby">Made By: Dinara G. & Shirin E.</div>
+</div>
+
 </footer>
 <div id="progress">
     <span id="progress-value"><img class="arrow" src="images/arrow.png"></span>
