--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,12 @@
 
 
             <nav id="nav" class="nav open">
-
+                <ul class="sprachen">
+                    <li class="nav-item"><a href="indexdeu.html" class="nav-link">DE</a></li>
+                    <li class="nav-item"><a href="indexrus.html" class="nav-link">RUS</a></li>
+                </ul>
                 <ul class="nav-list">
+
                     <li class="nav-item"><a href="#" class="nav-link">додому</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">форми</a></li>
                     <li class="nav-item"><a href="https://termin.bremen.de/termine/select2?md=50&lang=ua_UA" class="nav-link">Призначення</a></li>
@@ -33,7 +37,6 @@
                     <li class="nav-item"><a href="#" class="nav-link">консультативний</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">телефонна книга</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">контакти</a></li>
-
                 </ul>
 
                 <button id="nav-btn" class="nav-button">
@@ -48,7 +51,7 @@
             <div class ="header-content">
                <h1 class ="header-heading">Добро пожаловать!</h1>
                <p >Здесь вы найдете информацию об учреждениях и органах власти в Бремене.</p>
-                <button class="button" type="button"><a href="https://www.google.com/maps/d/embed?mid=1ssJFDO0nSvmtCTCqISL792GdyZB0EQQ&ehbc=2E312F">Карта</a></button>
+                <button class="button" type="button"><a href="https://www.google.com/maps/d/embed?mid=1ssJFDO0nSvmtCTCqISL792GdyZB0EQQ&ehbc=2E312F">мапа</a></button>
             </div>
 
 
@@ -92,7 +95,7 @@
         </div>
     </div>
 </header>
-<div class="haupt"> <img class="info" src="images/infobunt.png" alt="info"></div>
+<div class="haupt"> <img class="info" src="images/infoukra.png" alt="info"></div>
 
 <script type="text/javascript">
     var counter = 1;
