--- a/src/indexrus.html
+++ b/src/indexrus.html
@@ -95,7 +95,7 @@
     </div>
     </div>
 </header>
-<div class="haupt"> <img class="info" src="images/infoukra.png" alt="info"></div>
+<div class="haupt"> <img class="info" src="images/inforus.png" alt="info"></div>
 
 <script type="text/javascript">
     var counter = 1;
