--- a/src/indexrus.html
+++ b/src/indexrus.html
@@ -54,7 +54,6 @@
                 <button class="button" type="button"><a href="https://www.google.com/maps/d/embed?mid=1ssJFDO0nSvmtCTCqISL792GdyZB0EQQ&ehbc=2E312F">мапа</a></button>
             </div>
 
-
             <div class="card-slideshow">
                 <div class="card">
                     <div class="first">
@@ -111,10 +110,7 @@
 
 <footer >
     <div class="footer-content">
-
-
-
-        <button class="button plakatbutton" type="button"><a href="">Plakat</a></button>
+        <button class="button plakatbutton" type="button"><a download="Aemter&BehoerdenPlakat" class="plakatbutton" href="Plakat/plakat.mp4">Plakat</a></button>
         <div class="madeby">Made By: Dinara G. & Shirin E.</div>
     </div>
 
